# CSE60868-signature-project

./: .gitignore  README.md  environment.yml  observation.md  online-dataset.md  pyproject.toml
CNN-Kathan/: cedar_classification_v2.ipynb  file.ipynb  infer_single_sample.py  part5_cross_domain_test.ipynb  signature_cnn_final.ipynb
CNN-Kathan/BHsig Results/: custom_10classes.json  custom_10classes_best.pt  custom_2classes.json  custom_2classes_best.pt  custom_allclasses.json  custom_allclasses_best.pt  resnet18_2classes.json
CNN-Kathan/Cedar Results/: cedar_forgery_custom.json  cedar_forgery_custom_best.pt  cedar_forgery_resnet18.json  cedar_writer_10_custom_best.pt  cedar_writer_2_custom_best.pt  cedar_writer_all_custom_best.pt
siamese/: requirements-inference.txt
siamese-shuvo/cluster/: README.md
siamese-shuvo/manifests/: bhsig260_index_raw.csv  bhsig260_manifest.csv  bhsig260_manifest_stats.json  bhsig260_small_manifest.csv  bhsig260_small_manifest_stats.json
siamese-shuvo/src/signature_siamese/: __init__.py  (+7 more)
siamese/cluster/: crc.md  eval_cedar_mode_b_smallcal_crc.job  eval_crc.job  eval_test_part5_crc.job  robustness_crc.job  train_crc.job  train_crc_hpo_array.job
siamese/manifests/: bhsig260_index_raw.csv  bhsig260_manifest.csv  bhsig260_manifest_stats.json  bhsig260_small_manifest.csv  bhsig260_small_manifest_stats.json
siamese/notebooks/: siamese_inference_demo.ipynb
siamese/scripts/: plot_far_frr.py  run_cedar_mode_b_local.sh  run_cedar_zero_shot_local.sh  run_single_validation_pair_local.sh
validation/results/: single_pair_result.json
(+86 files in other folders)
